# nf-sdk

./: .env  .env.1.2  .env.dev  README.md  UBUNTU.md  docker-compose-1.1.yml  docker-compose-1.2.yml  docker-compose-1.3.yml  docker-compose-1.4-local.yml  docker-compose-1.4.yml  docker-compose-1.5-sim.yml  docker-compose-1.5.yml  docker-compose-2.0-local.yml  docker-compose-2.0-sim.yml  docker-compose-2.0.yml  docker-compose-2.1-local.yml  docker-compose-2.1-sim.yml  docker-compose-3.x-local.yml  docker-compose-3.x-sim.yml  docker-compose-dev.yml  docker-compose-ontology.yml  docker-compose.yml  install.sh
balena/: README.md
code/: nf-vscode-extension-0.0.1.vsix
compose/: linux-rootless.yml  linux.yml
ha/: 00-deploy-system-dependencies.yml  01-deploy-glusterfs.yml  01-deploy-ha.yml  02-deploy-normal.yml  README.md  docker-compose-2.0-redis-ha.yaml.j2  hosts.yml
iotedge/: manifest-1.4.json
old/: .env  .env.1.3  docker-compose-1.0.yml  docker-compose-1.3.yml  docker-compose-1.4.yml  docker-compose-1.5-local.yml  docker-compose-1.5-sim.yml  docker-compose-1.5.yml
owl/: model.ttl
python/: LICENSE  setup.cfg
python/normalgw/bacnet/: bacenum_pb2.py  bacnet_pb2.py  bacnet_pb2_grpc.py  scan_pb2.py  scan_pb2_grpc.py  status_pb2.py  status_pb2_grpc.py
python/normalgw/hpl/: command_pb2.py  command_pb2_grpc.py  point_pb2.py  point_pb2_grpc.py
python/normalgw/platform/: config_pb2.py  logs_pb2.py  logs_pb2_grpc.py
sparkplug-historian/: README  tables.sql  views.sql
tests/: .env.example  matrix.sh  run.sh  setup.sh
tools/: delete-by-mac.py  enable-by-uuid.py  (+4 more)
(+148 files in other folders)
