[metadata]

name = normalgw
version = 0.0.11
author = Stephen Dawson-Haggerty
author_email = steve@normal.dev
description = Generated protobuf interfaces for the normal gateway
url = https://github.com/normalframework/nf

[options]
package_dir =
   = .
python_requires = >=3.6
packages = find:
install_requires =
   grpcio
   protobuf
   googleapis-common-protos

#[options.packages.find]
#where = normalgw
